--- a/FragmentExample/app/src/main/res/layout/activity_main.xml
+++ b/FragmentExample/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
     <LinearLayout
         android:id="@+id/fragmentcontainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical" />
 
